--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@elysiajs/cors": "^1.1.1",
     "@faker-js/faker": "^9.0.3",
     "elysia": "latest",
+    "openai": "^4.73.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
